[gd_scene load_steps=10 format=3 uid="uid://b74kwpnht8iks"]

[ext_resource type="Script" path="res://levels/level_0/level_0.gd" id="1_innjs"]
[ext_resource type="PackedScene" uid="uid://56ceirydn6yi" path="res://levels/level_0/level_0_blocks.tscn" id="2_7gklw"]
[ext_resource type="Shader" path="res://shaders/TV.gdshader" id="3_edqu2"]
[ext_resource type="PackedScene" uid="uid://ocryeli0i7dx" path="res://LevelBlocks/floor.tscn" id="4_injn7"]
[ext_resource type="PackedScene" uid="uid://dg8yhobkc2qwa" path="res://PlayerModel/player.tscn" id="5_lpx2e"]
[ext_resource type="PackedScene" uid="uid://5d0myasppyb8" path="res://LevelBlocks/gravity.tscn" id="6_mnsce"]
[ext_resource type="AudioStream" uid="uid://cflin4d0ye8vl" path="res://boombop.mp3" id="7_pr4kg"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_vuvf0"]
shader = ExtResource("3_edqu2")
shader_parameter/vertJerkOpt = 0.2
shader_parameter/vertMovementOpt = 0.0
shader_parameter/bottomStaticOpt = 0.0
shader_parameter/bottomStaticStrenth = 0.7
shader_parameter/scalinesOpt = 0.8
shader_parameter/rgbOffsetOpt = 0.2
shader_parameter/horzFuzzOpt = 0.15

[sub_resource type="SystemFont" id="SystemFont_yftx8"]
font_names = PackedStringArray("GB18030 Bitmap")
subpixel_positioning = 0

[node name="Level" type="Node"]
script = ExtResource("1_innjs")
level_blocks = ExtResource("2_7gklw")

[node name="Background" type="CanvasGroup" parent="."]
material = SubResource("ShaderMaterial_vuvf0")

[node name="Roof" parent="Background" instance=ExtResource("4_injn7")]
position = Vector2(-3, 0)
velocity_change = 100
is_floor = false
metadata/_edit_lock_ = true

[node name="top" type="ColorRect" parent="Background"]
offset_left = -20.0
offset_top = -12.0
offset_right = 1179.0
offset_bottom = 562.0
color = Color(0.30626, 0, 0.0218715, 1)
metadata/_edit_lock_ = true

[node name="bottom" type="ColorRect" parent="Background"]
offset_left = -8.0
offset_top = 562.0
offset_right = 1170.0
offset_bottom = 670.0
color = Color(0, 0, 0, 1)
metadata/_edit_lock_ = true

[node name="floor" type="ColorRect" parent="Background"]
offset_left = -13.0
offset_top = 559.0
offset_right = 1152.0
offset_bottom = 562.0
color = Color(0.531574, 0.000203016, 0.53164, 1)
metadata/_edit_lock_ = true

[node name="Score" type="Label" parent="Background"]
visible = false
offset_left = 780.0
offset_top = 18.0
offset_right = 1143.0
offset_bottom = 106.0
theme_override_colors/font_color = Color(0, 0.968627, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_yftx8")
theme_override_font_sizes/font_size = 47
text = "012345"
horizontal_alignment = 2

[node name="DeadTimer" type="Timer" parent="Background"]
wait_time = 2.582
one_shot = true

[node name="DeadLabel" type="Label" parent="Background"]
visible = false
offset_left = 122.0
offset_top = 191.0
offset_right = 1049.0
offset_bottom = 468.0
theme_override_font_sizes/font_size = 203
text = "01232312"
horizontal_alignment = 1

[node name="Label" type="Label" parent="Background/DeadLabel"]
layout_mode = 0
offset_left = 241.0
offset_top = -101.0
offset_right = 671.0
offset_bottom = 79.0
theme_override_colors/font_color = Color(0.597418, 0.272929, 0.0608194, 1)
theme_override_font_sizes/font_size = 131
text = "SCORE"
horizontal_alignment = 1

[node name="Player" parent="." instance=ExtResource("5_lpx2e")]
rotation = -4.46638e-06
player_color = Color(0.449588, 0.326374, 0.927169, 1)

[node name="LevelBlockTimer" type="Timer" parent="."]
wait_time = 4.83
autostart = true

[node name="Gravity" parent="." instance=ExtResource("6_mnsce")]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_pr4kg")
autoplay = true
parameters/looping = true

[connection signal="timeout" from="Background/DeadTimer" to="." method="_on_dead_timer_timeout"]
[connection signal="sgnl_player_died" from="Player" to="." method="_on_player_sgnl_player_died"]
[connection signal="timeout" from="LevelBlockTimer" to="." method="_on_level_block_timer_timeout"]
